--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <div id="gameboard">
 
     </div>
+    <div id="results">
+
+    </div>
     <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
